feature: updated configuration template

--- a/example/configuration.yaml
+++ b/example/configuration.yaml
@@ -4,16 +4,31 @@ GV:
   LoadingFolder: "services"
 
 GlobalRules:
-  Test: >
-    echo "test"
+  Build: "cd docker && docker-compose build"
+  Start: "cd docker && docker-compose up -d"
+  Stop: "cd docker && docker-compose down"
+  Restart: "cd docker && docker-compose restart"
 
 MainRules:
   - "Load"
   - "Actualize"
 
+DefaultServiceRules:
+  Load: >
+    make _clone \
+    repo="{{GV.RepoBase}}/{{V.Path}}.git" \
+    to="{{GV.LoadingFolder}}/{{V.Path}}" &&
+    cd {{GV.LoadingFolder}}/{{V.Path}} &&
+    make Load || true
+  Actualize: >
+    make {{V.ServiceName}}_Load &&
+    cd {{GV.LoadingFolder}}/{{V.Path}} &&
+    git pull origin $(git branch --show-current) &&
+    make Actualize || true
+
 Services:
   Configurator:
-  # service variables
+    # service variables
     V:
       Path: "configurator"
   Promise:
@@ -22,14 +37,3 @@ Services:
     Rules:
       Load: "git clone {some_2}"
   # etc...
-
-DefaultServiceRules:
-  Load: >
-    make _clone \
-    repo="{{GV.RepoBase}}/{{V.Path}}.git" \
-    to="{{GV.LoadingFolder}}/{{V.Path}}"
-
-  Actualize: >
-    make {{V.ServiceName}}_Load &&
-    cd {{GV.LoadingFolder}}/{{V.Path}} &&
-    git pull origin $(git branch --show-current)
