--- a/example/configuration.yaml
+++ b/example/configuration.yaml
@@ -3,12 +3,15 @@ GV:
   RepoBase: "https://github.com/semichkin-gopkg"
   LoadingFolder: "services"
 
+EnvFiles:
+  - import.env
+
 GlobalRules:
   Start: "cd docker && docker-compose up -d --build"
   Stop: "cd docker && docker-compose down"
   Restart: "make Stop && make Start"
   
-  Env: "echo ${DEFAULT_VALUE} && echo ${EXAMPLE}"
+  Env: "echo ${FROM_ENV} && echo ${FROM_LOCAL_ENV} && echo ${FROM_IMPORT_ENV}"
 
 MainRules:
   - "Load"
