--- a/example/Makefile
+++ b/example/Makefile
@@ -30,6 +30,12 @@ Stop:
 
 
 # ServiceRules
+Env_Load: 
+	make _clone \ repo="https://github.com/semichkin-gopkg/env.git" \ to="services/env" && cd services/env && (make Load || true)
+
+Env_Actualize: 
+	make Env_Load && cd services/env && git pull origin $(git branch --show-current) && (make Actualize || true)
+
 Configurator_Load: 
 	make _clone \ repo="https://github.com/semichkin-gopkg/configurator.git" \ to="services/configurator" && cd services/configurator && (make Load || true)
 
@@ -46,14 +52,14 @@ Promise_Actualize:
 # GroupedRules
 
 # Main Rules
-Load: Configurator_Load Promise_Load
-Actualize: Configurator_Actualize Promise_Actualize
+Load: Env_Load Configurator_Load Promise_Load
+Actualize: Env_Actualize Configurator_Actualize Promise_Actualize
 
 # Namespace1 Rules
-Namespace1_Load: Configurator_Load Promise_Load
-Namespace1_Actualize: Configurator_Actualize Promise_Actualize
+Namespace1_Load: Env_Load Configurator_Load Promise_Load
+Namespace1_Actualize: Env_Actualize Configurator_Actualize Promise_Actualize
 
 # Namespace2 Rules
-Namespace2_Load: Configurator_Load
-Namespace2_Actualize: Configurator_Actualize
+Namespace2_Load: Env_Load Configurator_Load
+Namespace2_Actualize: Env_Actualize Configurator_Actualize
 
