Added Expressions support

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,9 +1,11 @@
+# Expressions
+export PWD := $(shell pwd)
+export FROM_EXPRESSIONS := $(shell echo "from_expressions")
+
+
+# EnvFiles
 ifneq (,$(wildcard .env))
 	include .env
-	export
-endif
-ifneq (,$(wildcard .local.env))
-	include .local.env
 	export
 endif
 ifneq (,$(wildcard import.env))
@@ -12,12 +14,17 @@ ifneq (,$(wildcard import.env))
 endif
 
 
-# GlobalRules
+# InternalRules
 _clone: 
-	[ -d '${to}' ] || git clone ${repo} ${to}
+	@[ -d '${to}' ] || git clone ${repo} ${to}
 
-Env: 
-	echo ${FROM_ENV} && echo ${FROM_LOCAL_ENV} && echo ${FROM_IMPORT_ENV}
+
+# GlobalRules
+EnvFilesTest: 
+	@echo ${FROM_IMPORT_ENV}
+
+ExpressionsTest: 
+	@echo ${FROM_EXPRESSIONS}
 
 Restart: 
 	make Stop && make Start
