--- a/example/configuration.yaml
+++ b/example/configuration.yaml
@@ -3,6 +3,9 @@ GV:
   RepoBase: "https://github.com/semichkin-gopkg"
   LoadingFolder: "services"
 
+Expressions:
+  - export FROM_EXPRESSIONS := $(shell echo "from_expressions")
+
 EnvFiles:
   - import.env
 
@@ -10,8 +13,8 @@ GlobalRules:
   Start: "cd docker && docker-compose up -d --build"
   Stop: "cd docker && docker-compose down"
   Restart: "make Stop && make Start"
-  
-  Env: "echo ${FROM_ENV} && echo ${FROM_LOCAL_ENV} && echo ${FROM_IMPORT_ENV}"
+  EnvFilesTest: "@echo ${FROM_IMPORT_ENV}"
+  ExpressionsTest: "@echo ${FROM_EXPRESSIONS}"
 
 MainRules:
   - "Load"
